# ChessEngine

./: CMakeLists.txt  Makefile  chessEngine
headers/: board.h  data.h  eval.h  generator.h  init.h  move.h  print.h  pvTable.h  search.h  struct.h  test.h
sources/: board.c  data.c  eval.c  generator.c  init.c  main.c  move.c  print.c  pvTable.c  search.c  test.c
